# AlgoShield2_Reference

./: CMakeLists.txt  README.md
api/: README.md  algo_api.h  algo_integ_api.h  algo_status.h  algo_types.h  api.h  config.h
lib/: README.md
scripts/CMake/: config.cmake
scripts/CMake/toolchain/: gcc.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/linux_async_dynamic/: CMakeLists.txt  main.c
src/app/tc275_sync_static/: CMakeLists.txt  main.c
src/integration/alloc/: alloc.h
src/integration/alloc/dynamic/: alloc.c
src/integration/alloc/static/: alloc.c
src/integration/async/: async.h
src/integration/async/linux/: async.c
src/integration/hal/: hal.h
src/integration/hal/infineon/tc275/: hal.c
src/integration/hal/pc/linux/: hal.c
test/fixed_point/: test_data.h
test/floating_point/: test_data.h
